test/tests/errors/error-file-eof-not-file.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    var x = 1;
    output eof(x);
}